samples/_failures_safe/1761786956_afa283_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28a47651.c: In function ‘tokenize’:
./samples/SAFE/__tmp_28a47651.c:182:15: error: expected ‘;’ at end of input
  182 |         tokens
      |               ^
      |               ;
./samples/SAFE/__tmp_28a47651.c:182:9: error: expected declaration or statement at end of input
  182 |         tokens
      |         ^~~~~~
./samples/SAFE/__tmp_28a47651.c:182:9: error: expected declaration or statement at end of input
